[project]
name = "gridworld_carwyn987"
version = "0.0.3"
authors = [
  { name="Carwyn Collinsworth", email="carwyncollinsworth@gmail.com" },
]
description = "Gridworld data generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/carwyn987/sampleproject"
Issues = "https://github.com/carwyn987/sampleproject/issues"